# hexagonal-app

./: .env  README.md  main.py  pyproject.toml  requirements.txt
application/commands/: create_user_command.py
application/exceptions/: user_exists_error.py
application/handlers/: create_user_handler.py  get_user_by_id_handler.py  list_users_handler.py
application/mediator/: mediator.py
application/queries/: get_user_by_id_query.py  list_users_query.py
application/use_cases/: create_user_use_case.py  find_all_users_use_case.py  get_user_by_id_use_case.py  list_users_use_case.py
config/: setting.py
core/entities/: user.py
core/ports/: i_unit_of_work.py  i_user_repository.py
core/use_cases/: create_user_use_case.py  get_user_by_id_use_case.py  list_users_use_case.py
errors/: custom_errors.py
infrastructure/: container.py
infrastructure/email/: email_service.py
infrastructure/persistence/: database.py  models.py  unit_of_work.py  user_repository.py
infrastructure/persistence/mappers/: user_mapper.py
infrastructure/web/controllers/: user_controller.py
middleware/: error_handler_middleware.py
prensentation/: main.py
static/images/: arquitectura-hexagonal.avif
