[project]
author = "Carlos Alberto Fis Fernández"
name = "hexagonal-app"
version = "0.1.0"
description = "Ejemplo sencillo de arquitectura hexagonal"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
]

